# live-agent

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.ps1
docker/: alter_phase3c_embedding_dim.sql  init_phase11b_skill_attempts.sql  init_phase12a_plan_engine.sql  init_phase12b_preemption.sql  init_phase13_memory_candidates.sql  init_phase13_specialist_evaluations.sql  init_phase14_decision_support.sql  init_phase14_memory_feedback.sql  init_phase15_release_gates.sql  init_phase16_official_smoke_ledger.sql  init_phase16_smoke.sql  init_phase1_audit.sql  init_phase2_pre_live.sql  init_phase3_memory.sql  init_phase4_danmaku_aggregates.sql  init_phase6c_harness_sessions.sql  init_phase7a_agent_evaluations.sql  init_phase7b_production_hardening.sql  init_postgres.sql
evaluation/: __init__.py  case_loader.py
front/: evaluation.html  index.html
scripts/: check_coverage_gate.py  check_doc_encoding.py  check_infra.py  check_sensitive_payloads.py  coverage_source.py  fetch_github_actions_evidence.py  render_phase16_official_smoke_evidence.py  run_agent_evaluation_worker.py  run_all.py  run_db_migrations.py  run_frontend.ps1  run_kafka_consumer.py  run_kafka_daemon.py  run_kafka_daemon_demo.py  run_phase11a_skill_runtime_demo.py  run_phase11b_platform_contract_demo.py  run_phase12a_dag_plan_engine_demo.py  run_phase12b_preemption_demo.py  run_phase13_evaluation.py  run_phase13_specialist_demo.py  run_phase14_human_support_demo.py  run_phase15_release_demo.py  run_phase16_controlled_multi_agent_demo.py  (+33 more)
(+570 files in other folders)
